[package]
name = "bevy_boiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
    # NOTE: REMOVE BEFORE RELEASE.
    # Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. 
    # If you remove the "dynamic" feature, your game executable can run standalone.
    "dynamic_linking",
] }

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
