[package]
name = "bevy_boiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
    # NOTE: REMOVE BEFORE RELEASE.
    # Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. 
    # If you remove the "dynamic" feature, your game executable can run standalone.
    "dynamic_linking",
] }
bevy_xpbd_3d = { version = "0.3.3", features = [
    "default",
    "debug-plugin",
    "enhanced-determinism",
] }
leafwing-input-manager = "0.11.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# XPBD optimization
[profile.release]
codegen-units = 1
